# currency-converter

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml
src/currency_converter/: __init__.py  __main__.py  cli.py  config.py  converter.py  exceptions.py  models.py  rates.py
tests/: conftest.py  test_config.py  test_converter.py
